--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/ellensarauer.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "ellen.png"
+  avatar           : "ellen.jpg"
   name             : "Ellen Sarauer"
   pronouns         : "she/her"  
   bio              : #"Short biography for the left-hand sidebar"
