--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Ellen Sarauer"
   pronouns         : "she/her"  
   bio              : #"Short biography for the left-hand sidebar"
-  location         : "Earth"
+  location         : "Munich, Germany"
   employer         : #"Red Brick University"
   uri              : # URL
   email            : #"none@example.org" 
